Modificacion Nombre TP

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="container-fluid">
                         <a class="navbar-brand" href="#">
                             <!-- <img src="/images/codoacodo.png" alt="Login" width="90" height="55" class="img-responsive"> -->
-                            <span class="titlePage">Task Manager</span> </a>
+                            <span class="titlePage">Task Manager - TPractico</span> </a>
                         <div class=" navbar-toggler-right">
                             <div class="navbar-nav me-2">
                                 <a class="nav-link" href="./index.html">Inicio</a>
