--- a/estudiantes.html
+++ b/estudiantes.html
@@ -32,7 +32,8 @@
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#">
-                        <img src="./public/imagenes/descarga.png" alt="Login" width="90" height="55" class="img-responsive">
+                        <img src="./public/imagenes/descarga.png" alt="Login" width="90" height="55"
+                            class="img-responsive">
                         <span class="titlePage">Task Manager - TP</span> </a>
                     <div class=" navbar-toggler-right">
                         <div class="navbar-nav me-2">
@@ -46,8 +47,20 @@
     </section>
 
     <main>
-
-
+        <header class="text-center">
+            <h1>Task Manager</h1>
+            <h3>Organizador de tareas para equipos</h3>
+        </header>
+        <br>
+        <section class="centrar">
+            <h1 class="titulo">Integrantes</h1>
+            <div class="">
+                <h2 class="integrantes">Conrado Giacosa</h2>
+                <h2 class="integrantes">Florencia Rojas</h2>
+                <h2 class="integrantes">Matias Santiago Leiva Azpiroz</h2>
+                <h2 class="integrantes">Roman Agrelo</h2>
+            </div>
+        </section>
     </main>
     <footer>
         <section class="content">
@@ -58,7 +71,7 @@
                 <a class="navbar-brand" href="#">Conferencias</a>
                 <a class="navbar-brand" href="#">Términos y Condiciones</a>
                 <a class="navbar-brand" href="#">Privacidad</a>
-                <a class="navbar-brand"  href="./estudiantes.html">Estudiantes</a>
+                <a class="navbar-brand" href="./estudiantes.html">Estudiantes</a>
             </nav>
         </section>
     </footer>
