--- a/register.html
+++ b/register.html
@@ -134,7 +134,7 @@
                 <a class="navbar-brand" href="#">Conferencias</a>
                 <a class="navbar-brand" href="#">Términos y Condiciones</a>
                 <a class="navbar-brand" href="#">Privacidad</a>
-                <a class="navbar-brand" href="#">Estudiantes</a>
+                <a class="navbar-brand"  href="./estudiantes.html">Estudiantes</a>
             </nav>
         </section>
     </footer>
