--- a/contacto.html
+++ b/contacto.html
@@ -38,8 +38,7 @@
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="./index.html">
-                            <img src="./imagenes/descarga.png" width="90" height="55"
-                                class="img-responsive">
+                            <img src="./imagenes/descarga.png" width="90" height="55">
                             <span class="titlePage">Task Manager - TP</span> </a>
                         <div class="titlePage" id="menu">Hola <span id="nombre"></span></div>
                         <div class=" navbar-toggler-right">
@@ -60,12 +59,14 @@
             <br>
             <form>
                 <label for="nombre">Nombre:</label>
-                <input type="text" id="nombre" required>
+                <input type="text" id="nombreContacto" required>
                 <label for="email">Email:</label>
                 <input type="email" id="email" required>
+                <!-- <span id="emailOK"></span> -->
+                <br>
                 <label for="mensaje">Mensaje:</label>
                 <textarea id="mensaje" name="mensaje" rows="4"></textarea>
-                <input type="submit" value="Enviar">
+                <input type="submit" value="Enviar" onclick="sendMail();">
             </form>
         </div>
         <div>
@@ -102,9 +103,47 @@
     <!-- Datos de Sesion -->
     <script src="./js/sesiones.js"></script>
     <script>
+        
         $(window).on('load', function () {
             actualizarEstadoSesion();
         });
+
+        document.getElementById('nombreContacto').addEventListener('input', function () {
+            campo = event.target;
+            let datos = campo.value;
+
+            // chequeo que el nombre tenga minimo 3 letras
+            if (datos.length > 3) {
+                document.getElementById("nombreContacto").style.backgroundColor = "lightgreen";
+            } else {
+                document.getElementById("nombreContacto").style.backgroundColor = 'lightyellow';
+
+            }
+        });
+
+        document.getElementById('email').addEventListener('input', function () {
+            campo = event.target;
+
+            let reg = /^(([^<>()[\]\\.,;:\s@\"]+(\.[^<>()[\]\\.,;:\s@\"]+)*)|(\".+\"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+
+            // chequeo que el mail contenga @ y dominio.xx
+            if (reg.test(campo.value)) {
+                document.getElementById("email").style.backgroundColor = "lightgreen";
+            } else {
+                document.getElementById("email").style.backgroundColor = 'lightyellow';
+            }
+        });
+
+
+
+        function sendMail() {
+            let name = document.getElementById("nombreContacto").value
+            if (!name) {
+                alert('Debe completar los datos')
+                return;
+            }
+            alert(`Gracias por sus comentarios ${name}, a la brevedad recibira noticias nuestras!`);
+        };
     </script>
 </body>
 
