--- a/help.html
+++ b/help.html
@@ -35,8 +35,7 @@
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="./index.html">
-                            <img src="./imagenes/descarga.png" width="90" height="55"
-                                class="img-responsive">
+                            <img src="./imagenes/descarga.png" width="90" height="55">
                             <span class="titlePage">Task Manager - TP</span> </a>
                         <div class="titlePage" id="menu">Hola <span id="nombre"></span></div>
                         <div class=" navbar-toggler-right">
