--- a/login.html
+++ b/login.html
@@ -28,40 +28,54 @@
 <body>
 
     <header>
-
+        <section>
+            <div>
+                <nav class="navbar navbar-expand-lg">
+                    <div class="container-fluid">
+                        <a class="navbar-brand" href="./index.html">
+                            <img src="./imagenes/descarga.png" width="90" height="55">
+                            <span class="titlePage">Task Manager - TP</span> </a>
+                        <div class="titlePage" id="menu">Ingrese sus datos</div>
+                        <div class=" navbar-toggler-right">
+                            <div class="navbar-nav me-2">
+                                <span><a class="nav-link" href="./help.html">Ayuda</a></span>
+                                <span id="sesionEstado"></span>
+                            </div>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </section>
     </header>
 
     <main>
-        <form>
-            <section class="content container-fluid col-12">
-                <div class="d-flex justify-content-center">
-                    <div class=" text-center">
+        <section>
+            <br>
+            <div class="d-flex justify-content-center">
+                <div class=" text-center">
 
-                        <label class="form-label" for="nombre">Nombre</label>
-                        <input type="text" id="nombre" class="form-control" />
+                    <label class="form-label" for="nombre">Nombre</label>
+                    <input type="text" id="nombre" class="form-control" />
 
-                        <label class="form-label" for="password">Clave</label>
-                        <input type="password" id="password" class="form-control" />
-                        <br>
-                        <button type="button" class="btn btn-primary btn-block mb-4 col-12"
-                            onclick="guardarNombre()">Entrar</button>
+                    <label class="form-label" for="password">Clave</label>
+                    <input type="password" id="password" class="form-control" />
+                    <br>
+                    <button type="button" class="btn btn-primary btn-block mb-4 col-12"
+                        onclick="guardarNombre()">Entrar</button>
 
-                        <div class="col d-flex justify-content-center">
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked />
-                                <label class="form-check-label" for="form2Example31"> Recordar </label>
-                            </div>
-                        </div>
-                        <div class="flex-login-center">
-                            <a href="#!">Olvidaste la contraseña?</a>
-                            <a href="./register.html">Registrate</a>
+                    <div class="col d-flex justify-content-center">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked />
+                            <label class="form-check-label" for="form2Example31"> Recordar </label>
                         </div>
                     </div>
+                    <div class="flex-login-center">
+                        <a href="#!">Olvidaste la contraseña?</a>
+                        <a href="./register.html">Registrate</a>
+                    </div>
                 </div>
-
-            </section>
-        </form>
-
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <a href="./estudiantes.html">Estudiantes</a>
@@ -76,7 +90,22 @@
     <script>
         window.onload = function () {
             actualizarEstadoSesion();
+            guardoLocalStorage(allUsers)
         };
+
+        function validar() {
+            var nombre = document.getElementById('nombre').value;
+            var password = document.getElementById('password').value;
+            if (!nombre) {
+                alert('Debe colocar su usuario');
+                return;
+            };
+            if (!password) {
+                alert('Debe colocar su clave');
+                return;
+            };
+            guardarNombre(nombre)
+        }
     </script>
 </body>
 
