--- a/login.html
+++ b/login.html
@@ -54,14 +54,14 @@
             <div class="d-flex justify-content-center">
                 <div class=" text-center">
 
-                    <label class="form-label" for="nombre">Nombre</label>
-                    <input type="text" id="nombre" class="form-control" />
+                    <label class="form-label" for="nombrelogin">Nombre</label>
+                    <input type="text" id="nombrelogin" class="form-control" />
 
                     <label class="form-label" for="password">Clave</label>
                     <input type="password" id="password" class="form-control" />
                     <br>
                     <button type="button" class="btn btn-primary btn-block mb-4 col-12"
-                        onclick="guardarNombre()">Entrar</button>
+                        onclick="validar();">Entrar</button>
 
                     <div class="col d-flex justify-content-center">
                         <div class="form-check">
@@ -94,8 +94,8 @@
         };
 
         function validar() {
-            var nombre = document.getElementById('nombre').value;
-            var password = document.getElementById('password').value;
+            let nombre = document.getElementById('nombrelogin').value;
+            let password = document.getElementById('password').value;
             if (!nombre) {
                 alert('Debe colocar su usuario');
                 return;
