--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <div class=" navbar-toggler-right">
                             <div class="navbar-nav me-2">
                                 <span><a class="nav-link" href="./index.html">Inicio</a></span>
-                                <span><a class="nav-link" href="./help.html">Ayuda</a></span>
+                                <span><a class="nav-link" href="./ayuda.html">Ayuda</a></span>
                                 <span id="sesionEstado"></span>
                             </div>
                         </div>
