--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
                         <div class="titlePage" id="menu">Ingrese sus datos</div>
                         <div class=" navbar-toggler-right">
                             <div class="navbar-nav me-2">
-                                <span><a class="nav-link" href="./help.html">Ayuda</a></span>
+                                <span><a class="nav-link" href="./ayuda.html">Ayuda</a></span>
                                 <span id="sesionEstado"></span>
                             </div>
                         </div>
