--- a/estudiantes.html
+++ b/estudiantes.html
@@ -41,7 +41,7 @@ c<!DOCTYPE html>
                         <div class=" navbar-toggler-right">
                             <div class="navbar-nav me-2">
                                 <span><a class="nav-link" href="./index.html">Inicio</a></span>
-                                <span><a class="nav-link" href="./help.html">Ayuda</a></span>
+                                <span><a class="nav-link" href="./ayuda.html">Ayuda</a></span>
                                 <span id="sesionEstado"></span>
                             </div>
                         </div>
