--- a/register.html
+++ b/register.html
@@ -18,6 +18,7 @@
     <!-- Estilos -->
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/contacto.css">
+    <link rel="stylesheet" href="./css/registro.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -51,19 +52,35 @@
             </div>
         </section>
     </header>
-    <br>
     <section>
-        <div class="container-2">
-            <h2>Formulario de Registro</h2>
+        <div class="container23">
+            <h1 id="form-title">FORMULARIO DE REGISTRO</h1>
             <br>
-            <form action="">
-                <label for="nombreContacto">Nombre:</label>
-                <input type="text" id="nombreContacto" required>
-                <label for="apellido">Apellido:</label>
-                <input type="text" id="apellido" required>
-                <br>
-                <input type="submit" value="Enviar" onclick="registrar(event);">
-                <input type="reset" value="Cancelar">
+            <form id="registerForm" onsubmit="return validateForm()">
+                <input type="text" name="nombre" placeholder="Nombre*" required><br>
+                <input type="text" name="apellido" placeholder="Apellido*" required><br>
+                <input type="email" name="correo" placeholder="Correo Electrónico*" required
+                    style="width: 100%; padding: 12px; margin-bottom: 10px; border: 1px solid #ccc; border-radius: 4px; box-sizing: border-box; font-size: 16px; transition: border-color 0.3s ease;">
+                <input type="text" name="usuario" placeholder="Usuario*" required><br>
+                <input type="password" name="contraseña" placeholder="Contraseña*" required><br>
+                <select name="area" id="area" required>
+                    <option value="">Seleccionar área*</option>
+                    <option value="administracion">Administración</option>
+                    <option value="ventas">Ventas</option>
+                    <option value="produccion">Producción</option>
+                    <option value="contabilidad">Contabilidad</option>
+                </select><br>
+                <div id="messageContainer">
+                    <p id="message"></p>
+                </div>
+                <p class="position-label">Posición:</p>
+                <input type="radio" name="posicion" value="jefe_area" id="jefe_area" required onchange="showMessage()">
+                <label for="jefe_area" class="checkbox-label">Jefe de área</label>
+                <input type="radio" name="posicion" value="empleado" id="empleado" required onchange="showMessage()">
+                <label for="empleado" class="checkbox-label">Empleado</label><br><br>
+                <input type="image"
+                    src="imagenes/depositphotos_138758512-stock-photo-register-red-button-3d-rendering.png"
+                    alt="Registrarse" style="width: 200px; height: 80px;" onclick="validateForm()">
             </form>
         </div>
     </section>
@@ -98,6 +115,55 @@
             };
         };
     </script>
+    <script>
+        function validateForm() {
+            var form = document.getElementById("registerForm");
+            var inputs = form.querySelectorAll("input, select");
+            var isValid = true;
+
+            for (var i = 0; i < inputs.length; i++) {
+                if (inputs[i].hasAttribute("required") && !inputs[i].value.trim()) {
+                    isValid = false;
+                    inputs[i].style.border = "1px solid red";
+                } else {
+                    inputs[i].style.border = "1px solid #ccc";
+                }
+            }
+
+            var emailInput = form.querySelector('input[type="email"]');
+            var emailValue = emailInput.value.trim();
+            var emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+
+            if (!emailPattern.test(emailValue)) {
+                isValid = false;
+                emailInput.style.border = "1px solid red";
+            }
+
+            if (isValid) {
+                var confirmation = confirm("Su registro se completó con éxito. Gracias por utilizar Task Manager.");
+                if (confirmation) {
+                    window.location.href = "login.html";
+                } else {
+                    window.location.href = "contacto.html";
+                }
+            } else {
+                alert("Por favor, complete todos los campos obligatorios correctamente.");
+            }
+
+
+        }
+
+        function showMessage() {
+            var message = document.getElementById("message");
+            var jefeArea = document.getElementById("jefe_area");
+            if (jefeArea.checked) {
+                message.textContent = "Estarás a cargo de asignar las tareas a tu área";
+            } else {
+                message.textContent = "Tu Jefe de área te asignará tus tareas";
+            }
+        }
+    </script>
+
 </body>
 
 </html>
