--- a/estudiantes.html
+++ b/estudiantes.html
@@ -61,7 +61,7 @@
         <br>
         <section class="centrar">
             <h2 class="titulo">Integrantes</h2>
-            <div class="">
+            <div>
                 <h2 class="integrantes">Conrado Giacosa</h2>
                 <h2 class="integrantes">Florencia Rojas</h2>
                 <h2 class="integrantes">Matias Santiago Leiva Azpiroz</h2>
